// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 count 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;

exports[`should render ExpenseSummary with 2 count 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $2.95
  </h1>
</div>
`;
